--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "inertiajs/inertia-laravel": "^0.6.0",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
+        "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4"
     },
