--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-vue": "^0.8.0",
     "vue": "^2.6.14",
+    "vue-media-upload": "^1.1.4",
+    "vue-upload-image": "^1.1.5",
     "vuetify": "^2.6.5"
   },
   "devDependencies": {
