--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@inertiajs/inertia": "^0.11.0",
     "@inertiajs/inertia-vue": "^0.8.0",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-preview": "^4.6.11",
     "vue": "^2.6.14",
+    "vue-filepond": "^6.0.3",
     "vue-media-upload": "^1.1.4",
     "vue-upload-image": "^1.1.5",
     "vuetify": "^2.6.5"
