--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "filepond": "^4.30.4",
     "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-preview": "^4.6.11",
+    "vi18n": "^4.0.0",
     "vue": "^2.6.14",
     "vue-filepond": "^6.0.3",
+    "vue-i18n": "^8.27.2",
     "vue-media-upload": "^1.1.4",
     "vue-upload-image": "^1.1.5",
     "vuetify": "^2.6.5"
