--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
+    "tailwindcss": "^3.1.4",
     "vue": "^2.6.12",
     "vue-cli-plugin-vuetify": "~2.4.8",
     "vue-loader": "^15.9.8",
