--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/ui": "^3.4",
         "spatie/laravel-medialibrary": "^10.0.0",
         "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-translatable": "^6.0",
         "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
