--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "filepond": "^4.30.4",
     "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-preview": "^4.6.11",
+    "qrcode.vue": "^1.7.0",
     "vi18n": "^4.0.0",
     "vue": "^2.6.14",
     "vue-filepond": "^6.0.3",
